<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_any"
            android:icon="@drawable/ic_emoticon_lol"
            android:title="@string/any_jokes" />
        <item
            android:id="@+id/nav_programming"
            android:icon="@drawable/ic_laptop"
            android:title="@string/programming_jokes" />
        <item
            android:id="@+id/nav_dark"
            android:icon="@drawable/ic_emoticon_devil"
            android:title="@string/dark_jokes" />
        <item
            android:id="@+id/nav_pun"
            android:icon="@drawable/ic_pun"
            android:title="@string/pun_jokes" />
        <item
            android:id="@+id/nav_christmas"
            android:icon="@drawable/ic_christmas"
            android:title="@string/christmas_jokes" />
        <item
            android:id="@+id/nav_spooky"
            android:icon="@drawable/ic_spooky"
            android:title="@string/spooky_jokes" />
        <item
            android:id="@+id/nav_miscellaneous"
            android:icon="@drawable/ic_bowling"
            android:title="@string/miscellaneous_jokes" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about"
                android:visible="false"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
