...
            app:layout_constraintEnd_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            app:srcCompat="@drawable/ic_menu_share" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffleButton"
        style="@style/FABStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
